--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "typescript-eslint": "^7.3.1"
+    "typescript-eslint": "^7.3.1",
+    "visibility": "^0.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
